--- a/app/src/main/res/layout/activity_customer_menu.xml
+++ b/app/src/main/res/layout/activity_customer_menu.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#4E4E4E"
-    tools:context=".CustomerMenu">
+    tools:context=".Screens.CustomerMenu">
 
     <TextView
         android:id="@+id/textView2"
@@ -22,7 +22,7 @@
         tools:ignore="MissingConstraints" />
 
     <Button
-        android:id="@+id/search_button"
+        android:id="@+id/signup_button"
         android:layout_width="290dp"
         android:layout_height="43dp"
         android:layout_marginTop="16dp"
@@ -70,7 +70,7 @@
         app:backgroundTint="#E9967A"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/search_button"
+        app:layout_constraintTop_toBottomOf="@+id/signup_button"
         tools:ignore="MissingConstraints" />
 
     <Button
