--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,7 +12,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0"
-        tools:context=".MainActivity" >
+        tools:context=".Screens.MainActivity" >
 
         <ImageView
             android:id="@+id/imageView7"
@@ -26,7 +26,7 @@
             app:srcCompat="@drawable/exbooks" />
 
         <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/username_textview"
+            android:id="@+id/fullname_textview"
             android:layout_width="235dp"
             android:layout_height="43dp"
             android:background="#696969"
@@ -53,11 +53,11 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.375"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/username_textview"
+            app:layout_constraintTop_toBottomOf="@+id/fullname_textview"
             app:layout_constraintVertical_bias="0.052" />
 
         <Button
-            android:id="@+id/search_button"
+            android:id="@+id/signup_button"
             android:layout_width="278dp"
             android:layout_height="43dp"
             android:text="כניסה"
@@ -81,7 +81,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.586"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/search_button"
+            app:layout_constraintTop_toBottomOf="@+id/signup_button"
             app:layout_constraintVertical_bias="0.877" />
 
         <TextView
@@ -111,7 +111,7 @@
             app:layout_constraintBottom_toTopOf="@+id/textView9"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/search_button"
+            app:layout_constraintTop_toBottomOf="@+id/signup_button"
             app:layout_constraintVertical_bias="0.056" />
 
         <ImageView
@@ -121,7 +121,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toEndOf="@+id/username_textview"
+            app:layout_constraintStart_toEndOf="@+id/fullname_textview"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.465"
             app:srcCompat="@android:drawable/ic_menu_my_calendar" />
