--- a/app/src/main/res/layout/register_screen.xml
+++ b/app/src/main/res/layout/register_screen.xml
@@ -25,7 +25,7 @@
             app:srcCompat="@drawable/exbooks" />
 
         <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/editText7"
+            android:id="@+id/city_textview"
             android:layout_width="290dp"
             android:layout_height="37dp"
             android:layout_marginTop="16dp"
@@ -38,7 +38,25 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.504"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/editText6"
+            app:layout_constraintTop_toBottomOf="@+id/email_textview"
+            tools:ignore="MissingConstraints" />
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/phone_textview"
+            android:layout_width="290dp"
+            android:layout_height="37dp"
+            android:layout_marginTop="16dp"
+            android:background="#696969"
+            android:hint=" פלאפון"
+            android:inputType="number"
+            android:textAlignment="textStart"
+            android:textColor="#FFFFFF"
+            android:textColorHint="#FFFFFF"
+            android:textSize="14sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.504"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/city_textview"
             tools:ignore="MissingConstraints" />
 
         <TextView
@@ -57,21 +75,21 @@
             tools:ignore="MissingConstraints" />
 
         <Button
-            android:id="@+id/search_button"
+            android:id="@+id/signup_button"
             android:layout_width="290dp"
             android:layout_height="43dp"
-            android:layout_marginTop="32dp"
+            android:layout_marginTop="24dp"
             android:text="הירשם"
             android:textSize="18sp"
             app:backgroundTint="#E9967A"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.504"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/editText7"
+            app:layout_constraintTop_toBottomOf="@+id/phone_textview"
             tools:ignore="MissingConstraints" />
 
         <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/editText6"
+            android:id="@+id/email_textview"
             android:layout_width="290dp"
             android:layout_height="37dp"
             android:layout_marginTop="16dp"
@@ -82,13 +100,13 @@
             android:textColorHint="#FFFFFF"
             android:textSize="14sp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.504"
+            app:layout_constraintHorizontal_bias="0.495"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/editText5"
+            app:layout_constraintTop_toBottomOf="@+id/repasswordragister_textview"
             tools:ignore="MissingConstraints" />
 
         <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/username_textview"
+            android:id="@+id/fullname_textview"
             android:layout_width="290dp"
             android:layout_height="37dp"
             android:layout_marginTop="32dp"
@@ -105,7 +123,7 @@
             tools:ignore="MissingConstraints" />
 
         <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/editText4"
+            android:id="@+id/username_textview"
             android:layout_width="290dp"
             android:layout_height="37dp"
             android:layout_marginTop="16dp"
@@ -118,16 +136,17 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.504"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/username_textview"
+            app:layout_constraintTop_toBottomOf="@+id/fullname_textview"
             tools:ignore="MissingConstraints" />
 
         <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/editText5"
+            android:id="@+id/passwordragister_textview"
             android:layout_width="290dp"
             android:layout_height="37dp"
             android:layout_marginTop="16dp"
             android:background="#696969"
-            android:hint=" סיסמא"
+            android:hint="                                                                   סיסמא  "
+            android:inputType="textPassword"
             android:textAlignment="textStart"
             android:textColor="#FFFFFF"
             android:textColorHint="#FFFFFF"
@@ -135,6 +154,25 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.504"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/editText4"
+            app:layout_constraintTop_toBottomOf="@+id/username_textview"
             tools:ignore="MissingConstraints" />
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/repasswordragister_textview"
+            android:layout_width="290dp"
+            android:layout_height="37dp"
+            android:layout_marginTop="16dp"
+            android:background="#696969"
+            android:hint="                                                        אישור סיסמא  "
+            android:inputType="textPassword"
+            android:textAlignment="textStart"
+            android:textColor="#FFFFFF"
+            android:textColorHint="#FFFFFF"
+            android:textSize="14sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.495"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/passwordragister_textview"
+            tools:ignore="MissingConstraints" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
