--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,11 +26,11 @@
             app:srcCompat="@drawable/exbooks" />
 
         <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/fullname_textview"
+            android:id="@+id/mail_textview"
             android:layout_width="235dp"
             android:layout_height="43dp"
             android:background="#696969"
-            android:hint=" שם משתמש"
+            android:hint="מייל"
             android:textColor="#FFFFFF"
             android:textColorHint="#FFFFFF"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -53,7 +53,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.375"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/fullname_textview"
+            app:layout_constraintTop_toBottomOf="@+id/mail_textview"
             app:layout_constraintVertical_bias="0.052" />
 
         <Button
@@ -101,7 +101,7 @@
             app:layout_constraintVertical_bias="0.961" />
 
         <TextView
-            android:id="@+id/textView11"
+            android:id="@+id/forgetpassword_textview"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:clickable="true"
@@ -121,7 +121,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toEndOf="@+id/fullname_textview"
+            app:layout_constraintStart_toEndOf="@+id/mail_textview"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.465"
             app:srcCompat="@android:drawable/ic_menu_my_calendar" />
